--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "peerDependencies": {
     "react-native": "^0.41.2",
     "react-native-windows": "0.41.0-rc.1"
+  },
+  "dependencies": {
+    "react-native": "^0.57.3"
   }
 }
