--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "",
   "license": "",
   "peerDependencies": {
+    "react-native": "^0.41.2"
   },
-  "dependencies": {
-    "react-native": "^0.57.3"
-  }
+  "dependencies": {}
 }
