--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "peerDependencies": {
     "react-native": "^0.41.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2"
+  }
 }
